--- a/docker.prod.yml
+++ b/docker.prod.yml
@@ -5,6 +5,7 @@ services:
         image: jenkins/jenkins:lts
         volumes:
             - .data:/var/jenkins_home 
+            - /var/run/docker.sock:/var/run/docker.sock
 
         ports:
             - 8080:8080
