--- a/docker.prod.yml
+++ b/docker.prod.yml
@@ -4,7 +4,7 @@ services:
     jenkins:
         image: jenkins/jenkins:lts
         volumes:
-            - .data:/var/jenkins_home 
+            - ./data:/var/jenkins_home 
             - /var/run/docker.sock:/var/run/docker.sock
 
         ports:
