--- a/docker.prod.yml
+++ b/docker.prod.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     jenkins:
-        image: jenkins/jenkins:lts
+        build: ./Dockerfile
         volumes:
             - ./data:/var/jenkins_home 
             - /var/run/docker.sock:/var/run/docker.sock
