--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,5 +1,5 @@
 FROM jenkins/jenkins:lts
 
-RUN sudo curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+RUN curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
-RUN sudo chmod +x /usr/local/bin/docker-compose
+RUN chmod +x /usr/local/bin/docker-compose
