--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,5 +1,9 @@
 FROM jenkins/jenkins:lts
 
+USER root
+
 RUN curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
 RUN chmod +x /usr/local/bin/docker-compose
+
+USER jenkins
