--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -2,7 +2,7 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
 
 RUN add-apt-repository \
    "deb [arch=amd64] https://download.docker.com/linux/debian \
