--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -2,16 +2,12 @@ FROM jenkins/jenkins:lts
 
 USER root
 
-RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -
+RUN wget https://download.docker.com/linux/debian/dists/stretch/pool/stable/amd64/docker-ce-cli_19.03.0~3-0~debian-stretch_amd64.deb
 
-RUN add-apt-repository \
-   "deb [arch=amd64] https://download.docker.com/linux/debian \
-   $(lsb_release -cs) \
-   stable"
+RUN dpkg -i docker-ce-cli_19.03.0~3-0~debian-stretch_amd64.deb
 
-RUN apt-get update
+RUN rm docker-ce-cli_19.03.0~3-0~debian-stretch_amd64.deb
 
-RUN apt-get install docker-ce docker-ce-cli containerd.io
 
 RUN curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 
