add jenkins behind nginx

--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -12,6 +12,8 @@ RUN curl -L "https://github.com/docker/compose/releases/download/1.25.5/docker-c
 
 RUN chmod +x /usr/local/bin/docker-compose
 
+RUN groupadd docker
+
 RUN usermod -aG docker jenkins
 
 USER jenkins
