--- a/docker.prod.yml
+++ b/docker.prod.yml
@@ -7,6 +7,14 @@ services:
             - ./data:/var/jenkins_home 
             - /var/run/docker.sock:/var/run/docker.sock
 
-        ports:
-            - 8080:8080
-            - 50000:50000
+        environment:
+            VIRTUAL_HOST: jenkins.mariamiau.com
+            LETSENCRYPT_HOST: jenkins.mariamiau.com
+            VIRTUAL_PORT: 8080
+
+        expose:
+            - 8080
+
+        # ports:
+        #     - 8080:8080
+        #     - 50000:50000
