--- a/docker.prod.yml
+++ b/docker.prod.yml
@@ -18,3 +18,9 @@ services:
         # ports:
         #     - 8080:8080
         #     - 50000:50000
+
+
+networks:
+  default:
+    external:
+        name: nginx-proxy
