--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,4 +1,6 @@
 FROM jenkins/jenkins:lts
+ARG HOST_UID=1002
+ARG HOST_GID=119
 
 USER root
 
@@ -23,6 +25,9 @@ RUN apt-get update
 
 RUN apt-get -y install docker-ce
 
+RUN curl -L “https://github.com/docker/compose/releases/download/1.25.5/docker-compose-$(uname -s)-$(uname -m)” -o /usr/local/bin/docker-compose && \
+   chmod +x /usr/local/bin/docker-compose && \
+   ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 
 # RUN dpkg -i docker-ce-cli_19.03.0~3-0~debian-stretch_amd64.deb
 
@@ -34,6 +39,10 @@ RUN apt-get -y install docker-ce
 
 # RUN groupadd -g 999 docker
 
+
+RUN usermod -u $HOST_UID jenkins
+
+RUN groupmod -g $HOST_GID docker
 RUN usermod -aG docker jenkins
 
 USER jenkins
